\relax after \mathchar, https://puszcza.gnu.org.ua/bugs/?230
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@137 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,15 @@
+2015-01-28  Michal Hoftich <michal.h21@gmail.com>
+
+	* tex4ht-mathltx.tex
+	* tex4ht-mathml.tex
+	* tex4ht-html-speech.tex
+	* tex4ht-jsmath.tex: added \relax after \mathchar to prevent eating
+	following characters as hexadecimal numbers.
+	https://puszcza.gnu.org.ua/bugs/?230
+	http://tex.stackexchange.com/q/116340/2891
+	
+	* Makefile (diff): new convenience target.
+
 2015-01-28  Karl Berry  <karl@gnu.org>
 
 	* tex4ht-4ht.tex (\CopyYear, \TeX4ht copyright): no need for
