--- a/lit/tex4ht-mathltx.tex
+++ b/lit/tex4ht-mathltx.tex
@@ -2708,7 +2708,7 @@ of \verb!\log! i.
 
 \<configure mathltx fontmath\><<<
 \def\:tempd#1#2{%
-   \expandafter\def\csname #1\endcsname{\mathchar"13#2}%
+   \expandafter\def\csname #1\endcsname{\mathchar"13#2\relax}%
    \MathSymbol\mathop{#1}%
    \expandafter\def\csname #1:limits\endcsname{\expandafter
                     \:same \math:sym\mathop{#1}\limits}%
