new file quoting.4ht, https://puszcza.gnu.org.ua/bugs/?198
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@138 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,11 @@
+2015-01-29  Michal Hoftich <michal.h21@gmail.com> and Karl Berry <karl@gnu.org>
+
+	* Makefile (tex4ht_4ht_derived): add quoting.4ht.
+	* tex4ht-4ht.tex (quoting.4ht): new generated file,
+        to restore <p> when quoting.sty is sued.
+	http://puszcza.gnu.org.ua/bugs/?198
+	http://tex.stackexchange.com/q/140986/2891
+
 2015-01-28  Michal Hoftich <michal.h21@gmail.com>
 
 	* tex4ht-mathltx.tex
