biblatex.4ht copyright, changelog
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@140 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,8 @@
+2015-02-04  Karl Berry  <karl@gnu.org>
+
+	* tex4ht-4ht.tex (biblatex.4ht): fixes from CVR for
+	http://puszcza.gnu.org.ua/bugs/?227.
+
 2015-01-29  Michal Hoftich <michal.h21@gmail.com> and Karl Berry <karl@gnu.org>
 
 	* Makefile (tex4ht_4ht_derived): add quoting.4ht.
