--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -2034,18 +2034,13 @@ and \''\Tg'.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
 \Section{Biblatex}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
 \SubSection{biblatex.sty}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
 
 \<biblatex.4ht\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% biblatex.4ht                          |version %
-% Copyright (C) |CopyYear.2007.       Eitan M. Gurari         %
-|<TeX4ht copyright|>
+% biblatex.4ht (|version), generated from |jobname.tex
+% Copyright |CopyYear.2007. Eitan M. Gurari
+|<TeX4ht copywrite|>
    |<config biblatex|> 
    |<shared config biblatex|>
    |<biblatex-crosslinking|>
@@ -29684,7 +29679,7 @@ with small  shifting.
 
 \<everyshi.4ht\><<<
 % everyshi.4ht (|version), generated from |jobname.tex
-% Copyright (C) |CopyYear.2004.       Eitan M. Gurari
+% Copyright (C) |CopyYear.2004. Eitan M. Gurari
 |<TeX4ht copywrite|>
   |<everyshi configurations|>
 \Hinput{everyshi}
