koma-script (scrartcl.4ht scrbook.4ht scrreprt.4ht) fixes
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@141 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,9 @@
+2015-02-07  Michal Hoftich <michal.h21@gmail.com>
+
+	* tex4ht-4ht.tex (scrartcl.4ht, scrbook.4ht, scrreprt.4ht):
+	koma-script patch, mail of 6 Feb 2015 12:32:10.
+	Original report from Alexander Willand.
+
 2015-02-04  Karl Berry  <karl@gnu.org>
 
 	* tex4ht-4ht.tex (biblatex.4ht): fixes from CVR for
