output <mi mathvariant..., https://puszcza.gnu.org.ua/bugs/?226
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@143 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,6 +1,12 @@
+2015-02-13  Michal Hoftich <michal.h21@gmail.com>
+
+	* tex4ht-mathml.tex (mathml.4ht) <config mathml fontmath>: 
+	output <mi mathvariant=...
+	https://puszcza.gnu.org.ua/bugs/?226
+
 2015-02-09  Michal Hoftich <michal.h21@gmail.com>
 
-	* tex4ht-mathml.tex (config start mtext): conditionalize
+	* tex4ht-mathml.tex (mathml.4ht) <config start mtext>: \ifmmode\else
 	<config math within mtext> to avoid some (but not all)
 	problems.  https://puszcza.gnu.org.ua/bugs/?244
 
