for ooffice: configure wrapfig to avoid spurious </p>; https://puszcza.gnu.org.ua/bugs/?247
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@146 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,8 @@
+2015-04-01  Michal Hoftich  <michal.h21@gmail.com>
+
+	* tex4ht-ooffice.tex: configure wrapfig to avoid spurious \par.
+	https://puszcza.gnu.org.ua/bugs/?247
+
 2015-02-17  Michal Hoftich  <michal.h21@gmail.com>
 
 	* tex4ht-4ht.tex (spanish.4ht): fix missing csname when Spanish
