--- a/lit/tex4ht-ooffice.tex
+++ b/lit/tex4ht-ooffice.tex
@@ -11651,6 +11651,28 @@ OO doesn't seem to hono mfenced
 }
 >>>
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{wrapfig}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\<configure ooffice wrapfig\><<<
+\pend:def\WFclear{%
+\let\orig:par\par%
+\def\par{\let\par\orig:par}%
+}%
+\append:def\WFclear{\let\par\orig:par}
+
+\Configure{wrapfloat}
+    {\ifvmode\IgnorePar\EndP
+       \HCode{<text:p><text:span text:class-name="wrapfig-\WFplace">}%
+       \def\endWrap{\ifvmode\IgnorePar\fi\EndP\HCode{</text:span></text:p>}\par}%
+     \else
+       \HCode{<text:span text:class-name="wrapfig-\WFplace">}\bgroup
+       \def\endWrap{\egroup\HCode{</text:span>}}%
+     \fi
+    }
+    {\endWrap}
+>>>>
 
 
 
