handle basic tables in memoir, https://puszcza.gnu.org.ua/bugs/?249
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@147 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,10 @@
+2015-04-14  Michal Hoftich  <michal.h21@gmail.com>
+
+	* Makefile (tex4ht_4ht_derived): add memoir.4ht.
+	* tex4ht-4ht.tex: improve array and tabular support for memoir;
+	input array,dcolumn,tabularx,booktabs.4ht, disable \columnlines.
+	http://puszcza.gnu.org.ua/bugs/?249
+
 2015-04-01  Michal Hoftich  <michal.h21@gmail.com>
 
 	* tex4ht-ooffice.tex: configure wrapfig to avoid spurious \par.
