many *.htf aliases from Michal, per http://tug.org/pipermail/tex4ht/2015q2/001180.html
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@150 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,13 @@
+2015-06-07  Michal Hoftich  <michal.h21@gmail.com>
+
+	* tex4ht-fonts-noncjk.tex: huge update of T1-encoded fonts 
+ 	not previously supported by tex4ht.
+ 	* t1fontmake.lua: new script.
+ 	* t1fontsample.tex: new sample tex file.
+	* Makefile (tex4ht_fonts_noncjk_derived): add two of
+	the new aliases/t1fonts/*.htf files.
+ 	Mail of http://tug.org/pipermail/tex4ht/2015q2/001180.html.
+
 2015-05-25  Michal Hoftich  <michal.h21@gmail.com>
         and Karl Berry <karl@gnu.org>
 
