for oo images: use \Gin@ext rather than \PictExt
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@153 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,9 @@
+2015-06-10  Michal Hoftich  <michal.h21@gmail.com>
+
+	* tex4ht-ooffice.tex (save image name): use \Gin@ext rather than
+	\PictExt (which is apparently always png).  Report from Simon Spiegel,
+	10 Jun 2015 10:21:19.
+
 2015-06-10  Radhakrishnan CV  <cvr@river-valley.org>
 
 	* tex4ht-4ht.tex (biblatex): \blx@checksum was a parameterless
