--- a/lit/tex4ht-ooffice.tex
+++ b/lit/tex4ht-ooffice.tex
@@ -1045,7 +1045,7 @@ original paths to be able to copy pictures to correct location.
 >>>
 
 \<save image name\><<<
-\expandafter\getImgFile\expandafter{\Gin@base}{\PictExt}
+\expandafter\getImgFile\expandafter{\Gin@base}{\Gin@ext}
 >>>
 
 
