use .xbb for png/jpg/gif, https://puszcza.gnu.org.ua/bugs/?257
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@154 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,10 @@
+2015-08-05  Michal Hoftich  <michal.h21@gmail.com>
+        and Karl Berry <karl@gnu.org>
+
+	* Makefile (derived): add graphicx.4ht.
+	* tex4ht-4ht.tex (graphicx.4ht): usee .xbb for png/jpg/gif.
+	https://puszcza.gnu.org.ua/bugs/?257
+
 2015-06-10  Michal Hoftich  <michal.h21@gmail.com>
 
 	* tex4ht-ooffice.tex (save image name): use \Gin@ext rather than
